--- a/CXP/datasets.ipynb
+++ b/CXP/datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +71,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_train.csv\"\n",
+    "train_df = pd.read_csv(train_df_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Train_subject_id = train_df['subject_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Train_subject_id.to_csv(\"TrainSubjectID.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_test.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Test_subject_id = test_df['subject_id']\n",
+    "Test_subject_id.to_csv(\"TestSubjectid.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -88,204 +142,196 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Image Index</th>\n",
-       "      <th>Finding Labels</th>\n",
-       "      <th>Follow-up #</th>\n",
-       "      <th>Patient ID</th>\n",
-       "      <th>Patient Age</th>\n",
-       "      <th>Patient Gender</th>\n",
-       "      <th>View Position</th>\n",
-       "      <th>OriginalImage[Width</th>\n",
-       "      <th>Height]</th>\n",
-       "      <th>OriginalImagePixelSpacing[x</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Infiltration</th>\n",
-       "      <th>Mass</th>\n",
-       "      <th>Nodule</th>\n",
-       "      <th>Atelectasis</th>\n",
-       "      <th>Pneumothorax</th>\n",
-       "      <th>Pleural_Thickening</th>\n",
-       "      <th>Pneumonia</th>\n",
-       "      <th>Fibrosis</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>Path</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Frontal/Lateral</th>\n",
+       "      <th>AP/PA</th>\n",
+       "      <th>No Finding</th>\n",
+       "      <th>Enlarged Cardiomediastinum</th>\n",
+       "      <th>Cardiomegaly</th>\n",
+       "      <th>Lung Opacity</th>\n",
+       "      <th>Lung Lesion</th>\n",
        "      <th>Edema</th>\n",
        "      <th>Consolidation</th>\n",
+       "      <th>Pneumonia</th>\n",
+       "      <th>Atelectasis</th>\n",
+       "      <th>Pneumothorax</th>\n",
+       "      <th>Pleural Effusion</th>\n",
+       "      <th>Pleural Other</th>\n",
+       "      <th>Fracture</th>\n",
+       "      <th>Support Devices</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00000001_000.png</td>\n",
-       "      <td>Cardiomegaly</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>58</td>\n",
-       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CheXpert-v1.0/train/patient00005/study1/view1_...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Frontal</td>\n",
        "      <td>PA</td>\n",
-       "      <td>2682</td>\n",
-       "      <td>2749</td>\n",
-       "      <td>0.143</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>00000001_001.png</td>\n",
-       "      <td>Cardiomegaly|Emphysema</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>58</td>\n",
-       "      <td>M</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>2894</td>\n",
-       "      <td>2729</td>\n",
-       "      <td>0.143</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CheXpert-v1.0/train/patient00005/study1/view2_...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Lateral</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>00000001_002.png</td>\n",
-       "      <td>Cardiomegaly|Effusion</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>58</td>\n",
-       "      <td>M</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>2048</td>\n",
-       "      <td>0.168</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CheXpert-v1.0/train/patient00005/study2/view1_...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Frontal</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>00000002_000.png</td>\n",
-       "      <td>No Finding</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>81</td>\n",
-       "      <td>M</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>2048</td>\n",
-       "      <td>0.171</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CheXpert-v1.0/train/patient00005/study2/view2_...</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Frontal</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>00000004_000.png</td>\n",
-       "      <td>Mass|Nodule</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>82</td>\n",
-       "      <td>M</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CheXpert-v1.0/train/patient00006/study1/view1_...</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Frontal</td>\n",
        "      <td>AP</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>2048</td>\n",
-       "      <td>0.168</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Image Index          Finding Labels  Follow-up #  Patient ID  \\\n",
-       "0  00000001_000.png            Cardiomegaly            0           1   \n",
-       "1  00000001_001.png  Cardiomegaly|Emphysema            1           1   \n",
-       "2  00000001_002.png   Cardiomegaly|Effusion            2           1   \n",
-       "3  00000002_000.png              No Finding            0           2   \n",
-       "4  00000004_000.png             Mass|Nodule            0           4   \n",
+       "   subject_id                                               Path     Sex  Age  \\\n",
+       "0           5  CheXpert-v1.0/train/patient00005/study1/view1_...    Male   33   \n",
+       "1           5  CheXpert-v1.0/train/patient00005/study1/view2_...    Male   33   \n",
+       "2           5  CheXpert-v1.0/train/patient00005/study2/view1_...    Male   33   \n",
+       "3           5  CheXpert-v1.0/train/patient00005/study2/view2_...    Male   33   \n",
+       "4           6  CheXpert-v1.0/train/patient00006/study1/view1_...  Female   42   \n",
        "\n",
-       "   Patient Age Patient Gender View Position  OriginalImage[Width  Height]  \\\n",
-       "0           58              M            PA                 2682     2749   \n",
-       "1           58              M            PA                 2894     2729   \n",
-       "2           58              M            PA                 2500     2048   \n",
-       "3           81              M            PA                 2500     2048   \n",
-       "4           82              M            AP                 2500     2048   \n",
+       "  Frontal/Lateral AP/PA  No Finding  Enlarged Cardiomediastinum  Cardiomegaly  \\\n",
+       "0         Frontal    PA         1.0                         NaN           0.0   \n",
+       "1         Lateral   NaN         1.0                         NaN           0.0   \n",
+       "2         Frontal    AP         NaN                         NaN           NaN   \n",
+       "3         Frontal    AP         NaN                         NaN           NaN   \n",
+       "4         Frontal    AP         1.0                         0.0           NaN   \n",
        "\n",
-       "   OriginalImagePixelSpacing[x      ...        Infiltration  Mass  Nodule  \\\n",
-       "0                        0.143      ...                 0.0   0.0     0.0   \n",
-       "1                        0.143      ...                 0.0   0.0     0.0   \n",
-       "2                        0.168      ...                 0.0   0.0     0.0   \n",
-       "3                        0.171      ...                 0.0   0.0     0.0   \n",
-       "4                        0.168      ...                 0.0   1.0     1.0   \n",
+       "   Lung Opacity  Lung Lesion  Edema  Consolidation  Pneumonia  Atelectasis  \\\n",
+       "0           NaN          NaN    NaN            0.0        NaN          NaN   \n",
+       "1           NaN          NaN    NaN            0.0        NaN          NaN   \n",
+       "2           NaN          NaN    NaN            NaN        NaN          NaN   \n",
+       "3           NaN          NaN    NaN            NaN        NaN          NaN   \n",
+       "4           NaN          NaN    NaN            NaN        NaN          NaN   \n",
        "\n",
-       "   Atelectasis  Pneumothorax  Pleural_Thickening  Pneumonia  Fibrosis  Edema  \\\n",
-       "0          0.0           0.0                 0.0        0.0       0.0    0.0   \n",
-       "1          0.0           0.0                 0.0        0.0       0.0    0.0   \n",
-       "2          0.0           0.0                 0.0        0.0       0.0    0.0   \n",
-       "3          0.0           0.0                 0.0        0.0       0.0    0.0   \n",
-       "4          0.0           0.0                 0.0        0.0       0.0    0.0   \n",
-       "\n",
-       "   Consolidation  \n",
-       "0            0.0  \n",
-       "1            0.0  \n",
-       "2            0.0  \n",
-       "3            0.0  \n",
-       "4            0.0  \n",
-       "\n",
-       "[5 rows x 26 columns]"
+       "   Pneumothorax  Pleural Effusion  Pleural Other  Fracture  Support Devices  \n",
+       "0           NaN               0.0            NaN       NaN              1.0  \n",
+       "1           NaN               0.0            NaN       NaN              1.0  \n",
+       "2           1.0               NaN            NaN       NaN              NaN  \n",
+       "3           1.0               NaN            NaN       NaN              NaN  \n",
+       "4           NaN               0.0            NaN       NaN              NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_image = \"/scratch/gobi2/projects/ml4h/datasets/NIH/images/\"\n",
-    "train_df_path =\"/scratch/gobi2/projects/ml4h/datasets/NIH/split/train.csv\"\n",
-    "train_df = pd.read_csv(train_df_path)\n",
-    "train_df.head()"
+    "val_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_valid.csv\"\n",
+    "val_df = pd.read_csv(val_df_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_subject_id = val_df['subject_id']\n",
+    "val_subject_id.to_csv(\"ValSubjectid.csv\", index=False)"
    ]
   },
   {
