--- a/CXP/datasets.ipynb
+++ b/CXP/datasets.ipynb
@@ -2,29 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from __future__ import print_function, division\n",
-    "# import os\n",
-    "# import torch\n",
-    "# from torch.utils.data import Dataset, DataLoader\n",
-    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,277 +50,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df.to_csv(\"True_withMeta.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_train.csv\"\n",
-    "train_df = pd.read_csv(train_df_path)"
+    "test_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_test.csv\"\n",
+    "val_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_valid.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Train_subject_id = train_df['subject_id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "train_df = pd.read_csv(train_df_path)\n",
+    "Train_subject_id = train_df['subject_id']\n",
     "Train_subject_id.to_csv(\"TrainSubjectID.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_test.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_df = pd.read_csv(test_df_path)\n",
     "Test_subject_id = test_df['subject_id']\n",
     "Test_subject_id.to_csv(\"TestSubjectid.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>Path</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Frontal/Lateral</th>\n",
-       "      <th>AP/PA</th>\n",
-       "      <th>No Finding</th>\n",
-       "      <th>Enlarged Cardiomediastinum</th>\n",
-       "      <th>Cardiomegaly</th>\n",
-       "      <th>Lung Opacity</th>\n",
-       "      <th>Lung Lesion</th>\n",
-       "      <th>Edema</th>\n",
-       "      <th>Consolidation</th>\n",
-       "      <th>Pneumonia</th>\n",
-       "      <th>Atelectasis</th>\n",
-       "      <th>Pneumothorax</th>\n",
-       "      <th>Pleural Effusion</th>\n",
-       "      <th>Pleural Other</th>\n",
-       "      <th>Fracture</th>\n",
-       "      <th>Support Devices</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>CheXpert-v1.0/train/patient00005/study1/view1_...</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Frontal</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>CheXpert-v1.0/train/patient00005/study1/view2_...</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Lateral</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>CheXpert-v1.0/train/patient00005/study2/view1_...</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Frontal</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>CheXpert-v1.0/train/patient00005/study2/view2_...</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Frontal</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>CheXpert-v1.0/train/patient00006/study1/view1_...</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42</td>\n",
-       "      <td>Frontal</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   subject_id                                               Path     Sex  Age  \\\n",
-       "0           5  CheXpert-v1.0/train/patient00005/study1/view1_...    Male   33   \n",
-       "1           5  CheXpert-v1.0/train/patient00005/study1/view2_...    Male   33   \n",
-       "2           5  CheXpert-v1.0/train/patient00005/study2/view1_...    Male   33   \n",
-       "3           5  CheXpert-v1.0/train/patient00005/study2/view2_...    Male   33   \n",
-       "4           6  CheXpert-v1.0/train/patient00006/study1/view1_...  Female   42   \n",
-       "\n",
-       "  Frontal/Lateral AP/PA  No Finding  Enlarged Cardiomediastinum  Cardiomegaly  \\\n",
-       "0         Frontal    PA         1.0                         NaN           0.0   \n",
-       "1         Lateral   NaN         1.0                         NaN           0.0   \n",
-       "2         Frontal    AP         NaN                         NaN           NaN   \n",
-       "3         Frontal    AP         NaN                         NaN           NaN   \n",
-       "4         Frontal    AP         1.0                         0.0           NaN   \n",
-       "\n",
-       "   Lung Opacity  Lung Lesion  Edema  Consolidation  Pneumonia  Atelectasis  \\\n",
-       "0           NaN          NaN    NaN            0.0        NaN          NaN   \n",
-       "1           NaN          NaN    NaN            0.0        NaN          NaN   \n",
-       "2           NaN          NaN    NaN            NaN        NaN          NaN   \n",
-       "3           NaN          NaN    NaN            NaN        NaN          NaN   \n",
-       "4           NaN          NaN    NaN            NaN        NaN          NaN   \n",
-       "\n",
-       "   Pneumothorax  Pleural Effusion  Pleural Other  Fracture  Support Devices  \n",
-       "0           NaN               0.0            NaN       NaN              1.0  \n",
-       "1           NaN               0.0            NaN       NaN              1.0  \n",
-       "2           1.0               NaN            NaN       NaN              NaN  \n",
-       "3           1.0               NaN            NaN       NaN              NaN  \n",
-       "4           NaN               0.0            NaN       NaN              NaN  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_valid.csv\"\n",
-    "val_df = pd.read_csv(val_df_path)"
+    "val_df = pd.read_csv(val_df_path)\n",
+    "val_subject_id = val_df['subject_id']\n",
+    "val_subject_id.to_csv(\"ValSubjectid.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_subject_id = val_df['subject_id']\n",
-    "val_subject_id.to_csv(\"ValSubjectid.csv\", index=False)"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
