--- a/CXP/Splits/dataset.ipynb
+++ b/CXP/Splits/dataset.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_test.csv\""
+    "test_df_path =\"PATH TO DATASET CSV FILES IN YOUR SERVER/new_test.csv\""
    ]
   },
   {
@@ -54,9 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_train.csv\"\n",
-    "test_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_test.csv\"\n",
-    "val_df_path =\"/scratch/gobi2/projects/ml4h/datasets/CheXpert/split/July19/new_valid.csv\""
+    "train_df_path =\"/PATH TO DATASET CSV FILES IN YOUR SERVER/new_train.csv\"\n",
+    "test_df_path =\"/PATH TO DATASET CSV FILES IN YOUR SERVER/new_test.csv\"\n",
+    "val_df_path =\"/PATH TO DATASET CSV FILES IN YOUR SERVER/new_valid.csv\""
    ]
   },
   {
