--- a/NIH/Confidence.ipynb
+++ b/NIH/Confidence.ipynb
@@ -14,41 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diseases = ['Atelectasis', 'Cardiomegaly', 'Consolidation', 'Edema',\n",
-    "       'Effusion', 'Emphysema', 'Fibrosis', 'Hernia', 'Infiltration', 'Mass',\n",
-    "       'Nodule', 'Pleural_Thickening', 'Pneumonia', 'Pneumothorax']\n",
-    "\n",
-    "\n",
-    "diseases_abbr = {'Atelectasis': 'At',\n",
-    "                'Cardiomegaly': 'Cd',\n",
-    "                'Effusion': 'Ef',\n",
-    "                'Infiltration': 'In',\n",
-    "                'Mass': 'M',\n",
-    "                'Nodule': 'N',\n",
-    "                'Pneumonia': 'Pa',\n",
-    "                'Pneumothorax': 'Px',\n",
-    "                'Consolidation': 'Co',\n",
-    "                'Edema': 'Ed',\n",
-    "                'Emphysema': 'Em',\n",
-    "                'Fibrosis': 'Fb',\n",
-    "                'Pleural_Thickening': 'PT',\n",
-    "                'Hernia': 'H'\n",
-    "                }"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_path =\"/scratch/gobi2/projects/ml4h/datasets/NIH/split/July16/train.csv\"\n",
-    "test_df_path = \"/scratch/gobi2/projects/ml4h/datasets/NIH/split/July16/test.csv\"\n",
-    "val_df_path = \"/scratch/gobi2/projects/ml4h/datasets/NIH/split/July16/valid.csv\"\n",
+    "train_df_path = \"/PATH TO DATASET CSV FILES IN YOUR SERVER/split/new_train.csv\"\n",
+    "test_df_path  = \"/PATH TO DATASET CSV FILES IN YOUR SERVER/split/new_test.csv\"\n",
+    "val_df_path   = \"/PATH TO DATASET CSV FILES IN YOUR SERVER/split/new_valid.csv\"\n",
     "\n",
     "val_df = pd.read_csv(val_df_path)\n",
     "train_df = pd.read_csv(train_df_path)\n",
