--- a/NIH/Splits/dataset.ipynb
+++ b/NIH/Splits/dataset.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "train_df_path =\"/PATH TO DATASET CSV FILES IN YOUR SERVER/split/train.csv\"\n",
+    "test_df_path = \"/PATH TO DATASET CSV FILES IN YOUR SERVER/split/test.csv\"\n",
+    "val_df_path = \"/PATH TO DATASET CSV FILES IN YOUR SERVER/split/valid.csv\"\n"
    ]
   },
   {
@@ -15,9 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_path =\"/scratch/gobi2/projects/ml4h/datasets/new_split/8-1-1/new_train.csv\"\n",
-    "test_df_path =\"/scratch/gobi2/projects/ml4h/datasets/new_split/8-1-1/new_test.csv\"\n",
-    "val_df_path = \"/scratch/gobi2/projects/ml4h/datasets/new_split/8-1-1/new_valid.csv\""
+    "train_df = pd.read_csv(train_df_path)"
    ]
   },
   {
@@ -36,7 +37,7 @@
    ],
    "source": [
     "train_df = pd.read_csv(train_df_path)\n",
-    "Train_subject_id = train_df['subject_id']\n",
+    "Train_subject_id = train_df['Patient ID']\n",
     "Train_subject_id.to_csv(\"TrainSubjectID.csv\", index=False)"
    ]
   },
@@ -56,7 +57,7 @@
    ],
    "source": [
     "test_df = pd.read_csv(test_df_path)\n",
-    "Test_subject_id = test_df['subject_id']\n",
+    "Test_subject_id = test_df['Patient ID']\n",
     "Test_subject_id.to_csv(\"TestSubjectid.csv\", index=False)"
    ]
   },
@@ -76,7 +77,7 @@
    ],
    "source": [
     "val_df = pd.read_csv(val_df_path)\n",
-    "val_subject_id = val_df['subject_id']\n",
+    "val_subject_id = val_df['Patient ID']\n",
     "val_subject_id.to_csv(\"ValSubjectid.csv\", index=False)"
    ]
   }
