reorganising the MIMIC folder

--- a/MIMIC/Confidence.ipynb
+++ b/MIMIC/Confidence.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir('./results')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,225 +88,6 @@
     "print(\"Number of images:\",len(WholeData) )\n",
     "Whole =WholeData.groupby(\"subject_id\")\n",
     "print(\"Number of unique patients:\",len(Whole.count()) )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"8\" halign=\"left\">subject_id</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">No Finding</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Fracture</th>\n",
-       "      <th colspan=\"8\" halign=\"left\">Support Devices</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>...</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>F</th>\n",
-       "      <td>177853.0</td>\n",
-       "      <td>1.499090e+07</td>\n",
-       "      <td>2.883554e+06</td>\n",
-       "      <td>10000032.0</td>\n",
-       "      <td>12489621.0</td>\n",
-       "      <td>14985054.0</td>\n",
-       "      <td>17503573.0</td>\n",
-       "      <td>19999987.0</td>\n",
-       "      <td>72846.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>36680.0</td>\n",
-       "      <td>0.932361</td>\n",
-       "      <td>0.267733</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>194005.0</td>\n",
-       "      <td>1.501641e+07</td>\n",
-       "      <td>2.879538e+06</td>\n",
-       "      <td>10000764.0</td>\n",
-       "      <td>12493783.0</td>\n",
-       "      <td>15053729.0</td>\n",
-       "      <td>17487765.0</td>\n",
-       "      <td>19999442.0</td>\n",
-       "      <td>68734.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>52231.0</td>\n",
-       "      <td>0.938044</td>\n",
-       "      <td>0.257066</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 120 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       subject_id                                                      \\\n",
-       "            count          mean           std         min         25%   \n",
-       "gender                                                                  \n",
-       "F        177853.0  1.499090e+07  2.883554e+06  10000032.0  12489621.0   \n",
-       "M        194005.0  1.501641e+07  2.879538e+06  10000764.0  12493783.0   \n",
-       "\n",
-       "                                           No Finding       ... Fracture       \\\n",
-       "               50%         75%         max      count mean  ...      75%  max   \n",
-       "gender                                                      ...                 \n",
-       "F       14985054.0  17503573.0  19999987.0    72846.0  1.0  ...      1.0  1.0   \n",
-       "M       15053729.0  17487765.0  19999442.0    68734.0  1.0  ...      1.0  1.0   \n",
-       "\n",
-       "       Support Devices                                               \n",
-       "                 count      mean       std  min  25%  50%  75%  max  \n",
-       "gender                                                               \n",
-       "F              36680.0  0.932361  0.267733 -1.0  1.0  1.0  1.0  1.0  \n",
-       "M              52231.0  0.938044  0.257066 -1.0  1.0  1.0  1.0  1.0  \n",
-       "\n",
-       "[2 rows x 120 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WholeDataX =WholeData.groupby(\"gender\")\n",
-    "WholeDataX_df = WholeDataX.describe()\n",
-    "WholeDataX_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Male Percent:   52.17179676112925\n",
-      "female Percent:   47.82820323887075\n",
-      "#images 371858.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "dfWhole_Sex = WholeDataX_df[\"subject_id\"]['count']\n",
-    "total_CXP= dfWhole_Sex[\"F\"]+dfWhole_Sex[\"M\"]\n",
-    "Male_percent = 100*dfWhole_Sex[\"M\"]/total_CXP\n",
-    "print(\"Male Percent:  \",Male_percent)\n",
-    "\n",
-    "print(\"female Percent:  \",100*dfWhole_Sex[\"F\"]/total_CXP)\n",
-    "print(\"#images\",total_CXP) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "M    194005\n",
-       "F    177853\n",
-       "Name: gender, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WholeData['gender'].value_counts()"
    ]
   },
   {
